@startuml

title __FRAGMENT's Class Diagram__\n

  namespace com.example.netnew {
    namespace fragment {
      class com.example.netnew.fragment.NewsFragment {
          - gson : Gson
          - myActivity : Activity
          - rvNewsList : RecyclerView
          - tabTitle : TabLayout
          - titles : List<String>
          - type : String
          + onAttach()
          + onCreateView()
          - initView()
          - loadData()
          - loadTitle()
      }
    }
  }
  

  namespace com.example.netnew {
    namespace fragment {
      class com.example.netnew.fragment.UserFragment {
          - btnLogout : Button
          - headerRO : RequestOptions
          - imagePath : String
          - ivPhoto : ImageView
          - llPerson : LinearLayout
          - llSecurity : LinearLayout
          - llVideo : LinearLayout
          - mActivity : Activity
          - tvNickName : TextView
          + onAttach()
          + onCreateView()
          - initData()
          - initView()
          - selectClick()
      }
    }
  }
  

  com.example.netnew.fragment.NewsFragment -up-|> android.app.Fragment
  com.example.netnew.fragment.NewsFragment o-- com.example.netnew.adapter.NewsDataAdapter : mNewsAdapter
  com.example.netnew.fragment.UserFragment -up-|> android.app.Fragment
  com.example.netnew.fragment.UserFragment o-- com.example.netnew.util.MySqliteOpenHelper : helper
  com.example.netnew.fragment.UserFragment o-- com.example.netnew.bean.User : mUser


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
